fix rsvp spacing in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body {
 #nav > nav > div > div.navbar-collapse.collapse > ul > div > div > button {
   background-color: #F58F32;
   border: none;
-  margin-top: 20px;
+  margin-top: 24px;
   margin-bottom: 21px;
   letter-spacing: 1px;
   font-size: 30px;
